span & animation fix

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,7 @@
       <button type="submit" class="search-btn">Search</button>
     </form>
 
-    <div class="loader hidden">
-      <div class="loader"></div>
-    </div>
-
+    <span class="loader hidden"></span>
     <ul class="gallery"></ul>
     
     <script type="module" class="btn-submit" src="./main.js"></script>
